# night-dzr-backend

./: .gitignore  README.md  alembic.ini  db_requests_test.ipynb  example.docker-compose.yaml  example.env  main.py  pyproject.toml  requirements.txt  sql_designer_com.xml
app/data/: config_reader.py
app/routers/users/: crud.py  schemas.py  users.py
app/security/: security.py
app/sql/: database.py  models.py
backend/: example.env  main.py  requirements.txt
backend/app/routers/: users.py
backend/app/routers/users/: crud.py  schemas.py  users.py
backend/app/security/: security.py
backend/app/sql/: crud.py  database.py  models.py
config/: config_reader.py
data/: docker-compose.yaml  sql_designer_com.xml
data/schema/: dump.sql
migrations/: env.py
migrations/versions/: 1028e2fa3a2c_database_v1_0.py  4d56622eaa34_database_v2_0.py  56a4ce26e01f_add_task_table.py  8fed775673f0_add_chat_and_message_table.py  a146cd8ea47e_add_message_table.py  f6c6f95c2cc7_add_game_table.py
src/: config.py  main.py
src/auth/: auth.py  manager.py  models.py  schemas.py  utils.py
src/chat/: conn_manager.py  crud.py  models.py  router.py  shemas.py
src/database/: association_tables.py  db.py
src/endpoints/: users.py
src/games/: crud.py  models.py  router.py  shemas.py  utils.py
src/models/: user.py
src/routers/users/: crud.py  schemas.py  users.py
src/schemas/: user.py
src/security/: security.py
src/sql/: database.py  db.py  models.py
src/sql/crud/: user.py
src/tasks/: crud.py  models.py  router.py  shemas.py
src/teams/: crud.py  models.py  router.py  shemas.py  utils.py
src/template_router/: crud.py  router.py
src/websockets/: router.py  ws_manager.py
tests/: conftest.py  test_users.py
