[tool.poetry]
name = "night-dzr-backend"
version = "0.0.2"
description = ""
authors = ["3x0d2s"]
readme = "README.md"
packages = [{include = "night_dzr_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.1"}
asyncpg = "^0.27.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^10.4.2"}
alembic = "^1.10.4"
websockets = "^11.0.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode="auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
